[gd_scene load_steps=3 format=3 uid="uid://brylbyorugoip"]

[ext_resource type="Script" uid="uid://bc1lu678glicr" path="res://Objeto_movible.gd" id="1_yahgs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rsh15"]

[node name="Objeto_movible" type="Node2D" groups=["movibles"]]
script = ExtResource("1_yahgs")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_rsh15")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
